= reposurgeon project news =

4.28: 2021-08-07::
     Bug fixes for incremental mirroring, text search by tag name.
     Avoid creating duplicate tag names when a tag turns into a branch
     Enforce stable order of subnode traversals when doing node expansion.
     Added repocutter -t option to tag error messages from pipelines.

4.27: 2021-05-27::
     repocutter pathrename can do multiple path transforms in one command.
     repocutter closure finds transitive closures of path sets under copyfrom.
     IRC channel migration to OFTC.

4.26: 2021-04-03::
     Read and write original-oid fields in annotated tags.
     The read --cvsignores option is gone; use expunge to drop cvsignores.
     Replace tappy with tapview.

4.25: 2021-03-02::
     New manual section, "Tips and tricks".
     Tag rename checks that it won't step on an existing name.
     "help" without topic now emits a custom TOC with command groupings.
     Unite now produces union repositories with a valid master branch.
     repocutter errors out if presented with unexpected extra arguments.
     "tip" has been removed; what it was computing is not well defined.
     Revert removal of --cvsignores. Nay be revisyted in a future release
     All test messages conform to TAP and results are shipped through tappy.

4.24: 2021-02-13::
     Retire the read --cvsignores option; best to use an expunge instead.
     Subversion properties discarded during read are logged, not shouted.
     In branch/tag rename and expunge, be more flexible about RE delimiters.
     Commands that accept output redirection can also pipe to a command,
     The --branchmap option is gone in favor of using branch rename.
     The behavior and interface of the tag command has been simplified.
     The syntax of the expunge command has been simplified.
     The "paths [sub|sup]" command has been replaced by "path rename".
     The =Q set now provides a way to inspect recently modified events.