@@ -170,11 +170,18 @@ given, match all paths.  Useful when you need to examine a
 particularly complex node structure.
 
 swap::
-Swap the top two components of every path.  This is
-sometimes useful when converting a multi-project Subversion repository
-that has normal trunk/branch/tag structure under each top-level
-directory (of course the alternative is to break it into components
-using multiple strip operations).
+Swap the top two components of every path. If a PATTERN argument is given, 
+only paths matching the pattern are mutated.
+
+swapsvn::
+Like swap, but is aware of Subversion structure.  Requires that the
+second component of each matching path be "trunk", "branches", or
+"tags", terminates with error if this is not so. Swaps "trunk" and the
+top-level directory straight up.  For tags and branches, the following
+*two* components are swapped to the top - thus,
+"foo/branches/release23" becomes "branches/release23/foo".  If a
+PATTERN argument is given, only paths matching the pattern are
+mutated.
 
 testify::
 Replace commit timestamps with a monotonically increasing clock tick
