@@ -1,5 +1,9 @@
 = reposurgeon project news =
 
+Reposutory head::
+     Added swapsvn subcommand to repocutter.
+
+
 4.28: 2021-08-07::
      Bug fixes for incremental mirroring, text search by tag name.
      Avoid creating duplicate tag names when a tag turns into a branch
